# AI-dong-hanh-l-i-hi-n-th-m-n-h-nh-en

./: Linh Hồn Của AI - Chỉ Dẫn Chiến Lược Tối Thượng.txt  README.md  index.html  package-lock.json  package.json  quick_demo.html  test_api_keys.html
src/: App.tsx  SettingWindow.tsx  i18next.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/app/: cmd.rs  conf.rs
src-tauri/src/app/default/: settings.json
src/data/: vietnamCities.ts
src/hooks/: useSettingStore.tsx
src/locale/: languages.ts
src/locale/vi/: translation.json
src/scenes/: Pets.ts  manager.ts
src/services/: beautifulMomentsService.ts  companionAIService.ts  contextService.ts  geminiService.ts  masterCreativeSystemService.ts  petAIService.ts  scenariosService.ts  timeTrackingService.ts  weatherCacheService.ts  weatherEnhancedService.ts  weatherService.ts
src/types/: IEvents.ts  ISetting.ts
src/types/hooks/: type.ts
src/ui/components/: ContextSuggestionBubble.css  ContextSuggestionBubble.tsx  EnhancedThoughtBubble.css  EnhancedThoughtBubble.tsx  ThoughtBubble.css  ThoughtBubble.tsx
src/ui/setting_tabs/: About.tsx  ScenariosTab.css  ScenariosTab.tsx  Settings.tsx
src/utils/: handleSettingChange.ts  settings.ts
