[package]
name = "window_pet"
version = "0.0.9"
description = "Window Pet"
authors = ["SeakMengs"]
license = "MIT"
repository = "https://github.com/SeakMengs/WindowPet"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "protocol-asset", "process-relaunch", "window-all", "dialog-all", "fs-all", "path-all", "macos-private-api", "system-tray", "shell-open"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
mouse_position = "0.1.3"
log = "^0.4.20"
open = "5.0.1"
tokio = "1.35.1"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
# tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

# Context Awareness Dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi"] }
clipboard-win = "4.5"

[target.'cfg(not(windows))'.dependencies]
arboard = "3.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
